# fullstack-ai-workflow-system

./: .gitignore  README.md  docker-compose.yml  go.work  go.work.sum
apps/api/: Dockerfile  README.md  alembic.ini  coverage.xml  docker-compose.yml  pyproject.toml  test_workflow_e2e.py
apps/api/ai/crews/: code_reviewer.yaml  spec_to_tasks.yaml
apps/api/ai/prompts/: code_reviewer.md  spec_to_tasks.md
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_crew_tables.py  0002_add_users_table.py  0003_add_multi_agent_tables.py  0004_add_oauth_accounts_table.py  0005_add_task_archived_field.py  0006_add_mfa_fields.py
apps/api/app/: audit.py  auth.py  crew_runner.py  llm_providers.py  llm_router.py  main.py  models.py  models_multi_agent.py  prompt_processor.py  storage.py
apps/api/app/agents/: __init__.py  architect.py  coder.py  integrator.py  orchestrator.py  planner.py  supervisory_crew.py  tester.py
apps/api/app/auth_providers/: __init__.py  session.py  token_blacklist.py
apps/api/app/cache/: redis_cache.py
apps/api/app/core/: config.py
apps/api/app/crews/: code_reviewer.py
apps/api/app/db/: models.py  session.py
apps/api/app/jobs/: cleanup.py
apps/api/app/memory/: shared_memory.py
apps/api/app/middleware/: correlation.py  error_handler.py  metrics.py  rate_limit.py
apps/api/app/routers/: auth.py  auth_oauth.py  auth_refresh.py  auth_ws.py  batch_runs.py  (+4 more)
apps/api/tests/: __init__.py  conftest.py  test_agents.py  test_auth.py  test_manifest.py  test_prompt_processor.py  test_runs.py  test_security.py  test_workflow_integration.py
(+83 files in other folders)
